kubernetes/namespaces/default/h-asgi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: h-asgi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: h-asgi
  template:
    metadata:
      labels:
        app: h-asgi
    spec:
      containers:
      - name: h-asgi
        image: ghcr.io/vcokltfre/h:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 30m
            memory: 25Mi
          limits:
            cpu: 30m
            memory: 25Mi
        securityContext:
          readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
        runAsNonRoot: true
