kubernetes/namespaces/default/h-asgi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: h-asgi
spec:
  selector:
    app: h-asgi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
