kubernetes/namespaces/default/h-asgi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "kube-system/mtls-client-crt-bundle"
    nginx.ingress.kubernetes.io/auth-tls-error-page: "https://letterh.xyz"
  name: h-asgi
spec:
  tls:
  - hosts:
      - "*.pythondiscord.com"
    secretName: pythondiscord.com-tls
  rules:
  - host: h.pythondiscord.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: h-asgi
            port:
              number: 80
